# agentibrain-kernel

./: .env.example  .gitignore  .mcp.json.example  CHANGELOG.md  CLAUDE.md  Gemfile  README.md  _config.yml  architecture.md  compose.yml  concepts.md  index.md  operate.md  pyproject.toml  reference.md
.github/workflows/: ci.yml  deploy-assets.yml  docker-build.yml  pages.yml  publish.yml  release.yml
agentibrain/: __init__.py  bootstrap.py  cli.py  client.py  config.py  scaffold.py
agentibrain/migrations/: 002_embeddings_pgvector.sql  003_tick_state.sql
agents/: README.md
agents/brain-keeper/: agent.yml
api/: openapi.yaml
docs/: 00-INDEX.md  API.md  DEPLOYMENT.md  ENVIRONMENTS.md  GATEWAY-CONTRACT.md  GLOSSARY.md  HELM-QUICKSTART.md  INSTALL-LOCAL.md  INSTALL.md  MCP.md  MIGRATION.md  OPERATIONS.md  SECRETS.md  TROUBLESHOOTING.md  VAULT-SCHEMA.md
docs/architecture/: ARCHITECTURE.md  CLUSTERS.md  KEEPER.md  MARKERS.md  MATURITY.md  READERS-GUIDE.md  README.md  SYMBIOSIS.md  TELEMETRY.md
docs/operations/: BRAIN-INJECTION-REPAIR.md
examples/: README.md
examples/argocd/: agentibrain-root.yaml.example
examples/compose/: README.md  compose.litellm.yaml.example  compose.ollama.yaml.example  compose.openai.yaml.example
helm/: README.md
helm/brain-api/: Chart.yaml  values.yaml
helm/brain-cron/: Chart.yaml  values-anton.yaml  values.yaml
helm/brain-keeper/: Chart.yaml  values-anton-prod.yaml  values-anton.yaml  values.yaml
local/: .env.template  README.md  bootstrap.sh  compose.ollama.yml  k8s-bootstrap.sh
migrations/: 001_artifact_registry.sql  002_embeddings_pgvector.sql
observability/: README.md  brain-health.json  setup-grafana.sh
operator/: BLOCKS.md  ENHANCEMENTS.md  STATE.md  TODO.md  VISION.md  brain-models.yaml  inference-routes-brain.yaml
profiles/: README.md
services/: README.md
(+219 files in other folders)
