[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentibrain"
dynamic = ["version"]
description = "Standalone brain + knowledge-base kernel (agenti ecosystem)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "The Cloud Clock Work" }]
keywords = ["brain", "knowledge-base", "agenti", "memory", "rag"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.1",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "jinja2>=3.1",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.8",
]

[project.scripts]
brain = "agentibrain.cli:main"

[project.urls]
Homepage = "https://github.com/The-Cloud-Clock-Work/agentibrain-kernel"
Repository = "https://github.com/The-Cloud-Clock-Work/agentibrain-kernel"
Issues = "https://github.com/The-Cloud-Clock-Work/agentibrain-kernel/issues"

[tool.setuptools.packages.find]
include = ["agentibrain*"]

[tool.setuptools.package-data]
agentibrain = [
    "templates/compose/*.j2",
    "templates/helm/**/*",
    "templates/vault-layout/**/*",
]

[tool.setuptools.dynamic]
version = { attr = "agentibrain.__version__" }

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
